--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -276,9 +276,9 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
-# CONFIG_LD_BFD is not set
-CONFIG_LD_LLD=y
-CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LD_BFD=y
+# CONFIG_LD_LLD is not set
+# CONFIG_LD_DEAD_CODE_DATA_ELIMINATION is not set
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
@@ -312,7 +312,6 @@ CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
 CONFIG_ARCH_HAS_REFCOUNT_FULL=y
 CONFIG_ARCH_HAS_REFCOUNT=y
 CONFIG_ARCH_HAS_RELR=y
-CONFIG_RELR=y
 
 #
 # GCOV-based kernel profiling
