--- a/arch/arm64/configs/weeb_defconfig
+++ b/arch/arm64/configs/weeb_defconfig
@@ -767,22 +767,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_INPUT_BOOST_DURATION_MS=64
-CONFIG_WAKE_BOOST_DURATION_MS=1000
-CONFIG_MAX_BOOST_DURATION_MS=1500
-CONFIG_INPUT_BOOST_FREQ_LP=1209600
-CONFIG_INPUT_BOOST_FREQ_PERF=1286400
-CONFIG_INPUT_BOOST_FREQ_PERFP=0
-CONFIG_MAX_BOOST_FREQ_LP=1785600
-CONFIG_MAX_BOOST_FREQ_PERF=2323200
-CONFIG_MAX_BOOST_FREQ_PERFP=2649600
-CONFIG_CPU_FREQ_MIN_LP=768000
-CONFIG_CPU_FREQ_MIN_PERF=1056000
-CONFIG_CPU_FREQ_MIN_PERFP=1171200
-CONFIG_CPU_FREQ_IDLE_LP=576000
-CONFIG_CPU_FREQ_IDLE_PERF=710400
-CONFIG_CPU_FREQ_IDLE_PERFP=825600
+# CONFIG_CPU_INPUT_BOOST is not set
 
 #
 # CPU frequency scaling drivers
